# work-skills

./: DUAL_DEPLOYMENT.md  README.md  VERCEL_DEPLOYMENT.md  pyproject.toml  vercel.json
.claude/: design-audit-report.md  optimization-summary.md  refactoring-report.md  settings.local.json
.github/workflows/: deploy-pages.yml
api/: README.md  openai-proxy.js
docs/: DEPLOYMENT.md  index.html  skills.json
docs/css/: accessibility.css  styles.css
docs/js/: ai-client.js  config-manager.js  main.js  particles.js  prompt-manager.js  skills.js
docs/specs/: ai-skill-optimizer.md
scripts/: generate_skills_json.py
src/skiils/: __init__.py  core.py
src/skiils/docs/: index.html
src/skiils/skills/: ai.py  data.py  file.py  text.py  utils.py  画图.md
src/skiils/skills/tim-mediastorm/: SKILL.md
src/skiils/skills/tim-mediastorm/references/: style-guide.md
