[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "skiils"
version = "0.4.0"
description = "SKIILs - 可被任意其他项目随时调用的模块化多技能工具库"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name = "你的名字"}]
keywords = ["skills", "tools", "reusable", "callable"]

[tool.setuptools.packages.find]
where = ["src"]